# slambook2

ch10/: .gitignore  CMakeLists.txt  pose_graph_g2o_lie_algebra.cpp
ch13/: CMakeLists.txt
ch13/app/: run_kitti_stereo.cpp
ch13/config/: default.yaml
ch13/include/myslam/: config.h  g2o_types.h
ch13/src/: config.cpp  dataset.cpp  frontend.cpp  visual_odometry.cpp
ch4/: CMakeLists.txt
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/rgbd/: CMakeLists.txt
ch6/: CMakeLists.txt  ceresCurveFitting.cpp
ch7/: .gitignore  CMakeLists.txt  orb_cv.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp
ch8/: CMakeLists.txt  optical_flow.cpp
ch9/: .gitignore  CMakeLists.txt  bundle_adjustment_g2o.cpp  common.cpp
